Dropdown ellipses alignment fix

--- a/src/IWakeNoRoot.scss
+++ b/src/IWakeNoRoot.scss
@@ -1781,6 +1781,10 @@ p {
   }
 }
 
+.dropdown-toggle > .ellipses-truncate {
+  margin-top: -5px !important;
+  margin-bottom: -5px !important;
+}
 
 /* Legacy Bootstrap 4 */
 
